udocker (1.1.0) - EXPERIMENTAL

  * support image names prefixed by registry similarly to docker 
  * add execution engine selection logic
  * add fr execution engine based on shared library interception
  * add rc execution engine based on rootless namespaces

udocker (1.0.3)

  * Support for import Docker containers in newer metadata structure
  * Improve the command line parsing
  * Improve temporary file handling and removal
  * Support for additional execution engines to be provided in the future
  * Improved parsing of entrypoint and cmd metadata
    - closes: #53
  * Increase name alias length
    - closes: #52
  * Add support for change dir into volume directories
    - closes: #51
  * Fix deletion of files upon container import
    - closes: #50
  * Fix exporting of host environment variables to the containers
    - closes: #48
  * Change misleading behavior of import tarball from move to copy
    - closes: #44
  * Fix validation of volumes specification
    - closes: #43

udocker (1.0.2)

  * Improve download on repositories that fail authentication on /v2
  * Improve run verification of binaries with recursive symbolic links
  * Improve accelerated seccomp on kernels >= 4.8.0
    - closes: #40

udocker (1.0.1)

  * Minor bugfixes
  * Executable name changed from udocker.py to udocker
  * Added support for login into docker repositories
  * Added support for private repositories
  * Added support for listing of v2 repositories catalog
  * Added checksum verification for sha256 layers
  * Improved download handling for v1 and v2 repositories
  * Improved installation tarball structure
  * Insecure flag fixed
  * Address seccomp change introduced on kernels >= 4.8.0
  * Utilities for packaging
  * Improved verbose levels, messaging and output
    - closes: #24, #23
  * Fully implement support for registry selection --registry parameter
    - closes: #29
  * Provide support for private repositories e.g. gitlab registries
    - closes: #30