@@ -92,6 +92,9 @@ Setup of authentication information for access to remote docker registries. Enab
 .BR logout " " [ " " \-a " " ] " " | " " --registry=REGISTRY
 Remove authentication information created by "login". By default authentication is removed for the default REGISTRY. A specific REGISTRY can be specified with --registry. Alternatively ALL previously entered authentication information can be removed with the -a option.
 .TP
+.BR setup " "  --execmode=<Pn> " " | " " --execmode=<Fn> " " |  " " --execmode=<Rn> " " | " " --force " " | " " CONTAINER\-ID
+Change container execution settings. The option --execmode enables selection of an alternative execution engine. This feature is EXPERIMENTAL. 
+.TP
 .BR run " " [ " " RUNOPTIONS " " ] " " IMAGE " " | " " CONTAINER-ID " " | " " ALIAS " " [ " " COMMAND " " ARG1 " " ARG2 " " ... " " ]
 Execute a CONTAINER identified by CONTAINER-ID or ALIAS name. If an IMAGE name is provided instead of a CONTAINER-ID or ALIAS, then a CONTAINER will be automatically created from the specified IMAGE and executed. The "run" command will try to respect the execution information specified in the container or image metadata, if such information is not provided it will try to find a shell interpreter inside the container and execute it. Optionally a COMMAND to be executed inside the CONTAINER environment can be provided in the command line. The following RUNOPTIONS are available:
 .RS
@@ -157,6 +160,21 @@ A number defining the verbosity of udocker. Zero is the least verbose.
 .BR UDOCKER_DIR
 Override the location of the local repository.
 .TP
+.BR UDOCKER_BIN
+Override location of udocker related executables.
+.TP
+.BR UDOCKER_LIB
+Override location of udocker related libraries.
+.TP
+.BR UDOCKER_CONTAINERS
+Override location of udocker containers.
+.TP
+.BR UDOCKER_TMP
+Override location of udocker temporary directory default is /tmp.
+.TP
+.BR UDOCKER_KEYSTORE
+Override location of udocker keystore default is $HOME/.udocker/keystore.
+.TP
 .BR UDOCKER_TARBALL
 Location of a tarball containing a udocker distribution for installation or upgrade. Example "export UDOCKER_TARBALL=udocker_1.0.1.tgz; tar xzvf $UDOCKER_TARBALL udocker; ./udocker".
 .TP
@@ -165,6 +183,7 @@ Override the default udocker registry pointing to dockerhub.
 .TP
 .BR UDOCKER_INDEX
 Override the default udocker index pointing to dockerhub.
+
 
 .SH FILES
 .TP
